# IF

./: .gitignore  IF-notes.rtf  IFConfig.cmake  IFConfigVersion.cmake.in  LICENSE  README.md  ifCommonSettings.cmake
InitFile/: InitFileLexer.g4  InitFileLexer.java  InitFileParser.g4  InitFileParser.java  InitFileParserBaseListener.java  InitFileParserBaseVisitor.java  InitFileParserListener.java  InitFileParserVisitor.java  ifAddress.cpp  ifAddress.h  ifArray.cpp  ifArray.h  ifBase.cpp  ifBase.h  ifBoolean.cpp  ifBoolean.h  ifCompareWithoutCase.cpp  ifCompareWithoutCase.h  ifConfig.h.in  ifDouble.cpp  ifDouble.h  ifInteger.cpp  ifInteger.h  ifNull.cpp  ifNull.h  ifObject.cpp  ifObject.h  ifString.cpp  ifString.h  ifValue.cpp  ifValue.h  ifValueListener.cpp  ifValueListener.h  initFile.cpp  initFile.h  initFileAddress.cpp  initFileAddress.h  initFileArray.cpp  initFileArray.h  initFileBase.cpp  (+18 more)
InitFile/Tests/: ifContainersTest.cpp  ifParserTest.cpp  ifParserTest.rc.in  ifTestSupport.cpp  ifTestSupport.h  ifValuesTest.cpp  ifValuesTest.rc.in
InitFile/swig_if_in/: ifCommon.i
iOS/: CMakeLists.txt
initFile.xcodeproj/: project.pbxproj
initFile.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
non-iOS/: CMakeLists.txt
non-iOS/CPack/: CMakeLists.txt
non-iOS/Tests/: CMakeLists.txt  Test_containers.txt  Test_parser.txt  Test_values.txt
non-iOS/antlr4_generated_src/init_lexer/: InitFileLexer.cpp  InitFileLexer.h  InitFileLexer.interp  InitFileLexer.tokens
non-iOS/antlr4_generated_src/init_parser/: InitFileParser.cpp  InitFileParser.h  InitFileParser.interp  InitFileParserBaseListener.cpp  InitFileParserBaseListener.h  InitFileParserListener.cpp  InitFileParserListener.h
